hard-gists/cc704ba2a96e4a319e9e/run.log
=== Docker Run Log for cc704ba2a96e4a319e9e ===
Started at: Mi 29. Okt 20:17:42 CET 2025

[2025-10-29 20:17:42] START: Running container for cc704ba2a96e4a319e9e
[2025-10-29 20:17:42] SUCCESS: Container 9bf3bd823dfc3587ec65b0a1880c9732fd22b952afddb831d83ede8efb4611ee started for cc704ba2a96e4a319e9e
=== Container logs for cc704ba2a96e4a319e9e ===
  File "/snippet.py", line 123
    print 'Running in Pythonista app, using test data...\n'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for cc704ba2a96e4a319e9e ===
[2025-10-29 20:17:44] INFO: Container 9bf3bd823dfc3587ec65b0a1880c9732fd22b952afddb831d83ede8efb4611ee has stopped
